tests/errors/substructural/check/fully_linear_struct_partial_init_field_leaks.sim

        struct L: Move { r: &out i64 }
        struct Pair: Move { a: L b: L }
        fn f(src: Pair) {
            p: Pair;
            entry:
            p.a = move src.a;
            return
        }
        