tests/errors/substructural/check/fully_linear_struct_partial_init_field_leaks.err.expected
error: at 8:13: [SUB-ReturnValueLeak] In function 'f', block 'entry': value 'src.b' of type L is not consumed at return
   |
 8 |             return
   |             ^^^^^^
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
